xterm (292-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 23 May 2013 20:04:08 +0200

xterm (290-1) experimental; urgency=low

  * New upstream release
  * Drop 100_manpage_whatis.diff, no longer necessary.
  * Drop explicit --with-desktop-category, no longer necessary.
  * Update copy of XTerm FAQ to revision 1.221 (dated 2013/01/26).

 -- Julien Cristau <jcristau@debian.org>  Sat, 23 Feb 2013 16:09:09 +0100

xterm (287-1) experimental; urgency=low

  * New upstream release (closes: #694375)
    - add alternateScroll resource and corresponding control sequences which
      modify the scroll-forw and scroll-back actions: when the alternate
      screen is displayed, wheel mouse up/down will send cursor keys (closes:
      #683942)
    - improve rendering for the case when a Unicode character is absent in the
      bold font but present in the normal font by temporarily falling back to
      the normal font (closes: #359006, #408666)
    - check for misconfigured printerCommand resource on the first use, warn
      and disable it if it does not specify an executable command (closes:
      #691642)
  * Drop upstream patches.
  * Refresh remaining patches.
  * Explicitly set --with-desktop-category to avoid desktop-file-install
    failure.
  * Enable backarrowKeyIsErase in configure instead of 900_debian_xterm.diff.
  * Install png/svg icons.
  * Change xterm.man's NAME section to keep whatis(1) happy.

 -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 22:27:28 +0100

xterm (278-4) unstable; urgency=low

  * Update copy of XTerm FAQ to revision 1.199 (dated 2012/11/11).

 -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 20:17:49 +0100

xterm (278-3) unstable; urgency=low

  [ Timo Aaltonen ]
  * control: Mark the package as Multi-Arch: foreign.

  [ Julien Cristau ]
  * Apply a few patches recommended by upstream in #694375 (thanks!)
    - amend patch from 278-2 to catch more cases