@@ -8,6 +8,6 @@ Index: xterm/xterm.man
  Specifies whether control sequences that set/query the font should be allowed.
 -The default is \*(``true\*(''.
 +The default is \*(``false\*(''.
- .TP 8
- .B "allowScrollLock (\fPclass\fB AllowScrollLock)"
- Specifies whether control sequences that set/query
+ .TP 5
+ .B "allowPasteControls (\fPclass\fB AllowPasteControls)"
+ If true, allow control characters such as BEL and CAN to be pasted.
